# Trading-platform

./: .gitignore  CMakeLists.txt  conan_provider.cmake  conanfile.py  create_database.sql
benchmarks/: CMakeLists.txt
benchmarks/src/: main.cpp
client/: CMakeLists.txt
common/: CMakeLists.txt
common/include/common/: Candle.h  Decimal.h  Instrument.h  MatchResult.h  Order.h  OrderBookLevel.h  Position.h  ProtoMapper.h  Trade.h  Types.h  User.h  errors.h
core/: CMakeLists.txt
core/include/core/: MarketDataManager.h  TradingSimulator.h  TransactionGuard.h  accountManager.h  adminManager.h  authManager.h  core.h  tradingCore.h
core/src/: MarketDataManager.cpp  TradingSimulator.cpp  accountManager.cpp  adminManager.cpp  authManager.cpp  tradingCore.cpp
gateway/: CMakeLists.txt
gateway/services/: AccountService.h  AdminService.h  AuthService.h  MarketService.h  TradingService.h
gateway/src/: main.cpp
gateway/utils/: Authenticate.h  ProtoMapper.h  SessionInterceptor.h  ThreadSafeQueue.h
market_data/: CMakeLists.txt
market_data/include/market_data/: CandleAggregator.h  InstrumentData.h  marketData.h
market_data/src/: marketData.cpp
matching/: CMakeLists.txt
matching/include/matching/: matchingEngine.h  orderBook.h
matching/src/: matchingEngine.cpp  orderBook.cpp
proto/: account.proto  admin.proto  auth.proto  common.proto  market.proto  trading.proto
proto_generated/: CMakeLists.txt
storage/: CMakeLists.txt
storage/include/storage/: DatabaseManager.h  IAccountRepository.h  IInstrumentRepository.h  IOrderRepository.h  ITradeRepository.h  IUserRepository.h  storage.h  utils.h
storage/src/: mysql_account_repository.cpp  mysql_order_repository.cpp  mysql_trade_repository.cpp  mysql_user_repository.cpp
tests/: CMakeLists.txt
tests/account_tests/: CMakeLists.txt
tests/account_tests/src/: main.cpp
tests/auth_tests/: CMakeLists.txt
tests/auth_tests/src/: main.cpp
tests/core_tests/: CMakeLists.txt
tests/core_tests/src/: main.cpp
tests/market_data_tests/: CMakeLists.txt
tests/matching_tests/: CMakeLists.txt
tests/matching_tests/src/: main.cpp
tests/src/: main.cpp
tests/storage_tests/: CMakeLists.txt
tests/trading_core_tests/: CMakeLists.txt
tests/trading_core_tests/src/: main.cpp
